# Sample-Choppah

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.MD  app.py  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/wiki/: Architecture.md  Building-and-Releases.md  FAQ.md  Getting-Started.md  Home.md  Usage-Guide.md
scripts/: setup.bat  setup.sh
server/: __init__.py  app_factory.py  config.py
server/routes/: export.py  resolve.py  static.py  stream.py  upload.py
static/: app.js  index.html  style.css
static/css/: base.css  header.css  layout.css  overlays.css  queue.css  regions.css  sources.css
static/js/: bar.js  dom.js  export.js  helpers.js  main.js  players.js  precision.js  render.js  sources.js  state.js
tests/: test_app.py  test_frontend.js
