[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "get-da-choppah"
version = "1.0.0"
description = "Sample chopper for scratch DJs — chop regions from YouTube/local files and export"
readme = "README.MD"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "flask>=3.0",
    "flask-cors>=4.0",
    "yt-dlp>=2024.0",
    "pydub>=0.25",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]
build = [
    "pyinstaller>=6.0",
]

[project.scripts]
choppah = "server.app_factory:create_app"

[tool.setuptools.packages.find]
include = ["server*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-p no:flaky"
